--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,15 @@ services:
     ports:
       - "5001:5000"
 
-# recomendacoes:
-    #build: ./recomendacoes
-    #ports:
-     # - "5002:5000"
+  recomendacoes:
+    build: ./recomendacoes
+    ports:
+      - "5002:5000"
 
- # misturas:
-    #build: ./misturas
-    #ports:
-      #- "5003:5000"
+  misturas:
+    build: ./misturas
+    ports:
+      - "5003:5000"
 
   #contraindicacoes:
     #build: ./contraindicacoes
