finalizando contraindicacoes e criando o cliente para requisicoes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     ports:
       - "5003:5000"
 
-  #contraindicacoes:
-    #build: ./contraindicacoes
-    #ports:
-     # - "5004:5000"
+  contraindicacoes:
+    build: ./contraindicacoes
+    ports:
+      - "5004:5000"
