--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,30 @@
-version: "3.9"
-
 services:
   catalogo:
     build: ./catalogo
     ports:
-      - "5001:5000"
+      - "5011:5000"
 
   recomendacoes:
     build: ./recomendacoes
     ports:
-      - "5002:5000"
+      - "5012:5000"
 
   misturas:
     build: ./misturas
     ports:
-      - "5003:5000"
+      - "5013:5000"
 
   contraindicacoes:
     build: ./contraindicacoes
     ports:
-      - "5004:5000"
+      - "5014:5000"
 
   cliente:
     build: ./cliente
+    ports:
+      - "5015:5000"
     depends_on:
       - catalogo
       - recomendacoes
       - misturas
       - contraindicacoes
-
