--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     ports:
       - "5011:5000"
 
-  recomendacoes:
-    build: ./recomendacoes
+  recomendar:
+    build: ./recomendar
     ports:
       - "5012:5000"
 
@@ -25,6 +25,6 @@ services:
       - "5015:5000"
     depends_on:
       - catalogo
-      - recomendacoes
+      - recomendar
       - misturas
       - contraindicacoes
