--- a/catalogo/Dockerfile
+++ b/catalogo/Dockerfile
@@ -7,6 +7,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["sh", "-c", "python init_db.py && uvicorn app:app --host 0.0.0.0 --port 5000"]
+
 
 
